--- a/dark-index.html
+++ b/dark-index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dark-style.css">
 </head>
 <body>
     <div class="container">
-        <div class="icons-container"><div><a href="/dark-index.html"mode"><img class="moon-png"src="moon.png"></img></button></a></div>
+        <div class="icons-container"><div><a href="/index.html"mode"><img class="moon-png"src="moon.png"></img></button></a></div>
        <h2 class="header1">To-Do List </h2>
         </div>
 
