minor change : removed the anchor tag from the dark mode icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="icons-container"><div><a href="/dark-index.html"mode"><img class="moon-png"src="moon.png"></img></button></a></div>
+        <div class="icons-container"><div><img class="moon-png"src="moon.png"></img></button></div>
        <h2 class="header1">To-Do List </h2>
         </div>
 
