--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="icons-container"><div><img class="moon-png"src="moon.png"></img></button></div>
-       <h2 class="header1">To-Do List </h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo List</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>To-do List</h1>
+      <form id="new-task-form">
+        <input
+          type="text"
+          id="new-task-input"
+          placeholder="What do you plan?"
+        />
+        <input type="submit" value="Add Task" id="new-task-submit" />
+      </form>
+    </header>
+
+    <main>
+      <section class="task-list">
+        <h2>Tasks</h2>
+        <div id="tasks">
+         
         </div>
+      </section>
+    </main>
 
-        <div id="newtask">
-            <input type="text" placeholder="Add New Task">
-            <button id="push">Add</button>
-            <div id="tasks"></div>
-        </div>
-    </div>
-
-   
-
-<script src="js.js"></script>
-</body>
+    <script src="js.js"></script>
+  </body>
 </html>
